<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_drawer_layout"
    tools:context=".UserAboutUsActivity">

    <TextView
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="About US:"
        android:textSize="40dp"
        android:layout_marginLeft="23dp"
        android:id="@+id/aboutUsText"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="USCDoorDrink is a unique app that enables customers to specifically order coffee and tea drinks!"
        android:textSize="20dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="120dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/user_tool_bar"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">

        <include layout="@layout/user_nav_drawer" />

    </RelativeLayout>



</androidx.drawerlayout.widget.DrawerLayout>