<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/uscDoorDrink"
        style="@android:style/Widget.DeviceDefault.Light.TextView"
        android:layout_width="193dp"
        android:layout_height="41dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="132dp"
        android:text="@string/uscdoordrink"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="285dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uscDoorDrink" />

    <EditText
        android:id="@+id/editTextTextEmailAddress5"
        android:layout_width="289dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="288dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress5" />

    <Switch
        android:id="@+id/isMerchantSwitch"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="27dp"
        android:text="@string/merchant"
        android:textColor="#8C8888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />

    <Button
        android:id="@+id/signupButton3"
        android:layout_width="145dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="52dp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isMerchantSwitch" />
</androidx.constraintlayout.widget.ConstraintLayout>